--- a/.github/workflows/makefile.yml
+++ b/.github/workflows/makefile.yml
@@ -19,14 +19,16 @@ jobs:
         java-version: '11'
     - run: java -version
     
-    - name: Download buck
-      run: make install_buck
-
     - name: Cache buck
+      id: cache-buck
       uses: actions/cache@v2
       with:
         key: https://jitpack.io/com/github/airbnb/buck/f2865fec86dbe982ce1f237494f10b65bce3d270/buck-f2865fec86dbe982ce1f237494f10b65bce3d270-java11.pex
         path: tools/buck
+    
+    - name: Download buck
+      run: make install_buck
+      if: steps.cache-buck.outputs.cache-hit != 'true'
       
     - name: Run tests
       run: make test
