--- a/.github/workflows/makefile.yml
+++ b/.github/workflows/makefile.yml
@@ -40,7 +40,7 @@ jobs:
       run: make test
       
     - name: Upload buck build artifacts
-      uses: actions/upload-artifacts@v2
+      uses: actions/upload-artifact@v2
       with:
         name: buck-artifacts
         path: buck-out
