--- a/.github/workflows/makefile.yml
+++ b/.github/workflows/makefile.yml
@@ -35,6 +35,7 @@ jobs:
       with:
         name: buck-artifacts
         path: buck-out
+      continue-on-error: true # Can fail if no artifacts present
       
     - name: Run tests
       run: make test
